Fix primary button alignment

--- a/app/stylesheets/components/buttons.less
+++ b/app/stylesheets/components/buttons.less
@@ -84,7 +84,7 @@
 .btn.primary {
   background: @blue;
   color: #fff;
-  border: none;
+  border: 1px solid @blue;
   transition: background .1s ease;
 
   &:hover {
